// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`embedded filters embedded eq 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded select 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded transforms embedded limit 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded transforms embedded order 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded transforms embedded range 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;
